[package]
name = "imgrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.5.0"
gif = "0.13.3"
image = "0.25.8"
libc = "0.2"
mime_guess = "2.0.5"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "wincon"] }
